добавлена связь но не работает
